--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>OpSpark Bootcamp Prep</title>
+        <title>Ashley Bowen</title>
         <style>
             body {
                 background: rgb(125, 198, 205);
